<resources>
    <string name="hello">Hello World, Nil</string>
    <string name="app_name">MoboPlayer</string>
    <string name="verdion_code">1.2</string>
    <string name="app_versionname">Mobo</string>
    <string name="play_again">Play Again</string>
    <string name="add_playlist">Add_Playlist</string>
    <string name="delete_file">Delete File</string>
    <string name="play_last_file">Continue</string>
    <string name="exit">Exit</string>
    <string name="about">About</string>
    <string name="about_us">About Us</string>
    <string name="clear_played_list">Clear History</string>
    <string name="play_sys_mode">Play (System Mode)</string>
    <string name="play_normal_mode">Play (Normal Mode)</string>
    <string name="dialog_instructions">"You don't need anything"</string>
    <string name="setting_playback">Playback</string>
    <string name="setting_btn_seek_interval">Seek Interval</string>
    <string name="setting_key_btn_seek_interval">setting_key_btn_seek_interval</string>
    <string name="setting_file_list">File List</string>
    <string name="setting_show_media_file_only">Show Media File Only</string>
    <string name="setting_key_show_media_file_only">setting_key_show_media_file_only</string>
    <string name="setting_show_file_ext_name">Show File Extensions</string>
    <string name="setting_key_show_file_ext_name">setting_key_show_file_ext_name</string>
    <string name="setting_pcategory_playlist_title">PlayList</string>
    <string name="setting_key_clear_history">setting_key_clear_history</string>
    <string name="setting_clearhistory_title">Clear MediaFile</string>
    <string name="setting_pcategory_default_playmode">Player Mode</string>
    <string name="setting_key_set_systemplayer_default">setting_key_systemplayer_default</string>
    <string name="setting_title_systemplayer_default">System Player Mode</string>
    <string name="setting_pcategory_about_title">About</string>
    <string name="setting_key_about">setting_key_about</string>
    <string name="setting_title_about">About MoboPlayer</string>
    <string name="setting_toast_string">Purge Finished!</string>
    <string name="setting_pcategory_aboutsubtitle">Style of Subtitle</string>
    <string name="setting_key_subtitle_textsize">setting_key_subtitle_textsize</string>
    <string name="setting_title_subtitle_textsize">Change TextSize</string>
    <string name="setting_key_subtitle_textcolor">setting_key_subtitle_textcolor</string>
    <string name="setting_title_subtitle_textcolor">Change TextColor</string>
    <string name="setting_key_showsubtitle_ornot">setting_key_show_subtitle_ornot</string>
    <string name="setting_title_showsubtitle_ornot">Show Subtitle</string>
    <string name="setting_pcategory_aboutbattery">About Battery</string>
    <string name="setting_key_show_batterymsg_ornot">setting_key_show_battery_ornot</string>
    <string name="setting_title_show_batterymsg_ornot">Show Battery Message And Move Name</string>
    <string name="setting_pcategory_show_hidefile_ornot">About Files</string>
    <string name="setting_key_show_hidefile">setting_key_show_hidefile</string>
    <string name="setting_title_show_hidefile">Show Hidden File</string>
    <string name="setting_key_fontcolor_test">setting_key_fontcolor</string>
    <string name="setting_title_fontcolor_test">Choose Color</string>
    <string name="setting_summary_seekinterval">Set seeking interval (seconds) for fast forwarding</string>
    <string name="setting_summary_battery">"Show clock , move'name and battery information"</string>
    <string name="setting_summary_subtitle">Load the subtitle file automatically</string>
    <string name="setting_summary_fontsize">Set font size for subtitle displaying from Large, Medium and Small</string>
    <string name="setting_summary_fontcolor">Set text color for subtitle displaying</string>
    <string name="setting_summary_show_mediafile_only">Show media files only</string>
    <string name="setting_summary_show_fileextension">Show file extensions</string>
    <string name="setting_summary_show_hidefile">Show hidden files</string>
    <string name="setting_summary_clear_history">To purge MediaPlay file, CANNOT undo</string>
    <string name="active">Activate</string>
    <string name="setting">Setting</string>
    <string name="toast_msg_nosupport">This file cannot be played with System Player</string>
    <string name="dialog_message">Message</string>
    <string name="phone_imei">IMEI:</string>
    <string name="buy">Buy</string>
    <string name="active_success">Activated successfully!</string>
    <string name="active_failure">Cannot activate. Please try it later. Thanks!</string>
    <string name="back">Back</string>
    <string name="waiting">Communicating with activation server, please hold on...</string>
    <string name="connect_net_failure">Cannot connect to activation server. Please check network settings.</string>
    <string name="sure">Confirm</string>
    <string name="filelisttitle">video list</string>
    <string name="no_sdcard">"There's no SD Card , make sure it is usable."</string>
    <string name="no_fileselected">"There's no media directory , click here to set."</string>
    <string name="file_empty">No file was found in media directory,click here to find it or add media file.</string>
    <string name="dirchoose">Choose the media directory</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="previous_dir">Parent directory</string>
    <string name="filepath">Directory：</string>
    <string name="filesize">Size：</string>
    <string name="fileformat">Format：</string>
    <string name="fileresolution">Resolution：</string>
    <string name="filematrix">Rate：</string>
    <string name="fileplaytime">Time：</string>
    <string name="fileother">Other properties</string>
    <string name="message">Message</string>
    <string name="sure_cancel">Are you sure you want to delete the file?</string>
    <string name="del">Delete</string>
    <string name="detail">Property</string>
    <string name="sort">Sorting</string>
    <string name="sort_head">Sort by</string>
    <string name="select_filecount">Number of media folders chosen：</string>
    <string name="create_thumb">Generating thumbnail ...</string>
    <string name="addfile_count">Number of media files added：</string>
    <string name="delfile_count">Number of media files deleted：</string>
    <string name="sure_exit">Are you sure you want to quit?</string>
    <string name="soft_solution">Play by soft decoding mode</string>
    <string name="setting_catagory_title_media">Media library</string>
    <string name="setting_preference_title_clearmedia">Clear media library</string>
    <string name="setting_preference_title_clearmediapath">Close the set for media library</string>
    <string name="setting_preference_title_clearall">Clear all</string>
    <string name="file_not_exist">"Can't open file,please ensure the file is existed or try again after refresh media library."</string>
    <string name="currnetpath">Current directory:</string>
    <string name="findfiles_count">Number of files been deal with：</string>
    <string name="findfiles_totalcount">Number of media files found：</string>
    <string name="select_cmplayer">"This file can't be played by the system player,please long press to it,and select soft decoding mode in the menu."</string>
    <string name="setting_lpreference_title_updatefrequency">Update frequency</string>
    <string name="setting_lpreference_summery_updatefrequency">The current state of update frequency ：</string>
    <string name="setting_cpreference_title_updatewifi">Update when wifi is enable</string>
    <string name="versiondialog_title">Message</string>
    <string name="versiondialog_message">"A newer version was published ,please click 'Yes' to download it."</string>
    <string name="version_name">"Version's name:"</string>
    <string name="pub_date">Publish date:</string>
    <string name="change_log">Change logs:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="light">Brightness：%d%%</string>
    <string name="seekto" formatted="false">Jump to：%s (%d%%)[%s%d]</string>
    <string name="setting_key_mediafile_select">setting_key_mediafile_select</string>
    <string name="setting_preference_key_clearall">setting_preference_key_clearall</string>
    <string name="setting_preference_key_clearmedia">setting_preference_key_clearmedia</string>
    <string name="setting_preference_key_clearmediapath">setting_preference_key_clearmediapath</string>
    <string name="setting_listpreference_key_updateversion_frequency">setting_lpreference_key_updateversion_frequency</string>
    <string name="setting_checkpreference_key_updateversion_wifi">setting_cpreference_key_updateversion_wifi</string>
    <string name="entrance_welcome_title" formatted="false">"%sWelcome to use the fourth beta version of MoboPlayer%s

"</string>
    <string name="entrance_selection_title1">"No Mobo's beta account?"</string>
    <string name="entrance_selection_title2">"Have gotten a Mobo's beta account?"</string>
    <string name="entrance_selection_but1">register</string>
    <string name="entrance_selection_but2">login</string>
    <string name="entrance_register_title">Your email ,such as : josh@gmail.com</string>
    <string name="entrance_login_title">"Login by Mobo's beta account:"</string>
    <string name="entrance_login_title2">Email:</string>
    <string name="entrance_login_title3">Account number:</string>
    <string name="entrance_progress_title">Your mobile phone is to communicate with the server, this process may take a few minutes. Please wait</string>
    <string name="version_update">Version update</string>
    <string name="download">Download</string>
    <string name="help">Help</string>
    <string name="detail_sound">SoundTrack:</string>
    <string name="detail_subtitle">Subtitle:</string>
    <string name="screen_lock_setting">Screen lock setting</string>
    <string name="horizontal_only">Screen Rotation</string>
    <string name="character_set">Character Set</string>
    <string name="setting_file_scan_title">Types of file need to scan.</string>
    <string name="volume_setting">Volume keys setting.</string>
    <string name="screen_lock_tips">Screen lock tips</string>
    <string name="start_play">Play</string>
    <string name="need_play_next">Play next automatic.</string>
    <string name="download_from_market">DownloadFromMarket</string>
    <string name="download_from_mobo">DownloadFromMobo</string>
    <string name="plugin_get_dialog">" "<a href="">"Instructions for install offline codec package's"</a>" "</string>
    <string name="update_manul">Check New Version</string>
    <string name="setting_key_update_manul_preference">setting_key_preference_updatemanul</string>
    <string name="setting_cpreference_key_thumb">setting_cpreference_key_thumb</string>
    <string name="setting_lpreference_key_volume">setting_lpreference_key_volume</string>
    <string name="setting_lpreference_key_filelayout">setting_lpreference_key_filelayout</string>
    <string name="setting_cpreference_key_default_palymode">setting_cpreference_key_default_playmode</string>
    <string name="setting_cpreference_title_thumb">Using Media Thumbnail</string>
    <string name="setting_lpreference_title_volume">Gesture Sensitivity</string>
    <string name="setting_lpreference_title_filelayout">Display style</string>
    <string name="setting_cpreference_title_default_playmode">Default Using Soft-Decoding</string>
    <string name="setting_lpreference_change_summery">Level of gesture adjustment for volume and sound</string>
</resources>