<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/detail_layout" android:background="#ff676c81" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:id="@id/LinearLayout01" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:layout_marginBottom="5.0dip">
            <LinearLayout android:orientation="vertical" android:id="@id/detail_layout1" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <TextView android:textSize="18.0dip" android:textStyle="bold" android:textColor="@color/white" android:gravity="center" android:id="@id/tvtitle" android:layout_width="fill_parent" android:layout_height="40.0dip" android:text="filename" style="@style/ShadowStyleForWhite" />
                <TextView android:textColor="@color/white" android:id="@id/tvfilepath" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/filepath" style="@style/ShadowStyleForWhite" />
                <TextView android:textColor="@color/white" android:id="@id/tvfilesize" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/filesize" style="@style/ShadowStyleForWhite" />
                <TextView android:textColor="@color/white" android:id="@id/tvformat" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/fileformat" style="@style/ShadowStyleForWhite" />
                <TextView android:textColor="@color/white" android:id="@id/tvresl" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/fileresolution" style="@style/ShadowStyleForWhite" />
                <TextView android:textColor="@color/white" android:id="@id/tvplaytime" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/fileplaytime" style="@style/ShadowStyleForWhite" />
                <TextView android:textColor="@color/white" android:id="@id/tvMax" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/filematrix" style="@style/ShadowStyleForWhite" />
            </LinearLayout>
            <TextView android:textColor="@color/white" android:id="@id/detail_message" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" style="@style/ShadowStyleForWhite" />
            <View android:background="@color/lightgray" android:layout_width="wrap_content" android:layout_height="1.0dip" android:layout_marginLeft="30.0dip" />
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/detail_subtitle" style="@style/ShadowStyleForGrey" />
                <RadioGroup android:id="@id/detail_subtitle_group" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            </LinearLayout>
            <View android:background="@color/lightgray" android:layout_width="wrap_content" android:layout_height="1.0dip" android:layout_marginLeft="30.0dip" />
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/detail_sound" style="@style/ShadowStyleForGrey" />
                <RadioGroup android:id="@id/detail_audio_group" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            </LinearLayout>
            <View android:background="@color/lightgray" android:layout_width="wrap_content" android:layout_height="1.0dip" android:layout_marginLeft="30.0dip" />
            <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:id="@id/detail_play_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
                <Button android:id="@id/detail_start_play" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/start_play" />
                <Button android:id="@id/detail_cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="25.0dip" android:text="@string/cancel" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>